--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-  hello...
-<!-- <head>
+<head>
 <title>Sri Kshetra Nellitheertha</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
@@ -11,5 +10,5 @@
 </frameset>
 <noframes>
 <body bgcolor="FFCF69">
-</body></noframes> -->
+</body></noframes>
 </html>
