Update and rename nelli-desc.htm to nelli-desc.html

--- a/nelli-desc.html
+++ b/nelli-desc.html
@@ -34,30 +34,30 @@
           Lingam of Shri Somanatheshwara has been made out of pure Saligrama and 
           is considered very sacred. The Lingam has been built as Ardhanareeshwara. 
           There are other artifacts in and around the temple which are pointers 
-          to the past glory of this place. Among them are the <b>“Arasule Mancha”</b> 
-          <i>(King’s seat)</i>, <b>“Arasule Mantapa”</b> <i>(King’s abode)</i> 
-          and the <b>“Jina Vigraha”</b> <i>(Jain Statue)</i>. The temple of Shri 
+          to the past glory of this place. Among them are the <b>â€œArasule Manchaâ€</b> 
+          <i>(Kingâ€™s seat)</i>, <b>â€œArasule Mantapaâ€</b> <i>(Kingâ€™s abode)</i> 
+          and the <b>â€œJina Vigrahaâ€</b> <i>(Jain Statue)</i>. The temple of Shri 
           Mahaganapati has been rebuilt recently and is splendid in itself.</font></font></p>
         <p><font size="2" face="Arial, Helvetica, sans-serif">The most beautiful 
           aspect of the temple is the Cave. Apart from the cave, of course, there 
           are numerous other places surrounding the temple which are worth visiting. 
-          To the east of the temple’s entrance is the Amblattapadavu hillock. 
+          To the east of the templeâ€™s entrance is the Amblattapadavu hillock. 
           This hillock is about 300-500 feet high and offers a splendid scenery 
           from the top. One can spot places such as the Bajpe Airport, Mangalore, 
           Panambur, the MRPL refinery and Suratkal. On a day with clear skies, 
           one can even spot the Arabian Sea. Amblattapadavu offers a wonderful 
           view of sunrise and sunset everyday.</font></p>
-        <p><font size="2" face="Arial, Helvetica, sans-serif">The <b>“Nagappa 
-          Kere”</b> <i>(Snake Pond)</i> is a small pond situated to the north 
+        <p><font size="2" face="Arial, Helvetica, sans-serif">The <b>â€œNagappa 
+          Kereâ€</b> <i>(Snake Pond)</i> is a small pond situated to the north 
           of the temple. This natural pond, along with its religious significance, 
           is also a scenic spot. All devotees who want to enter the cave temple 
           have to clean themselves by taking bath in this pond and only then are 
           they allowed into the cave. The lake is at its best immediately after 
-          the monsoons<i> (Oct—Dec)</i> when its crystal clear water is a swimmer’s 
+          the monsoons<i> (Octâ€”Dec)</i> when its crystal clear water is a swimmerâ€™s 
           delight. There are plans to build a small herbal park around this pond 
           as also a small deer park.</font></p>
-        <p><font size="2" face="Arial, Helvetica, sans-serif">The <b>“Arasule 
-          Mancha”</b> or King’s seat is situated near the main entrance of the 
+        <p><font size="2" face="Arial, Helvetica, sans-serif">The <b>â€œArasule 
+          Manchaâ€</b> or Kingâ€™s seat is situated near the main entrance of the 
           temple towards the north. Historical evidence suggests that this seat 
           was where the king of the land used to be seated when he visited the 
           temple. It is believed that even today, the spirits of the former rulers 
