--- a/nelli-hist.html
+++ b/nelli-hist.html
@@ -54,7 +54,7 @@
           Jain interest and influence at the temple. These are evidence to suggest 
           that the temple and the region was probably under the administration 
           of Jain kings of the region.</font></p>
-        <p><font face="Arial, Helvetica, sans-serif" size="2">Click <a href="nelli-story.htm" target="_self">here</a> 
+        <p><font face="Arial, Helvetica, sans-serif" size="2">Click <a href="nelli-story.html" target="_self">here</a> 
           for reading the amazing story of the birth of the place.</font></p>
         </div>
     </td>
@@ -65,8 +65,7 @@
         <hr>
         <font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1"><br>
         Best Viewed in 800x600<br>
-        Designed by <a href="http://www.mangaloreworld.com">MangaloreWorld.com</a><br>
-        Copyright 2006 NelliTheertha.com</font></b></font></div>
+        Copyright 2024 NelliTheertha.com</font></b></font></div>
     </td>
   </tr>
 </table>
