--- a/bottom.html
+++ b/bottom.html
@@ -40,7 +40,7 @@
           Sri Kshetra Nellitheertha <br>
           Neerude Post, Kompadavu Village <br>
           Mangalore Taluk, South Kanara District <br>
-          Karnataka, India – 570063 <br>
+          Karnataka, India ï¿½ 570063 <br>
           Phone : 91-824-2299142 <br>
           Click <a href="mailto:contact@nellitheertha.com?subject=Mail%20Regarding%20Nellitheertha%20Website">here</a> 
           to email us</font></b></div>
@@ -53,7 +53,6 @@
           <hr>
           <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
             Viewed in 800x600<br>
-            Designed by <a href="http://www.mangaloreworld.com">MangaloreWorld.com</a><br>
             Copyright 2006 NelliTheertha.com</font></b></font></p>
         </div>
       </td>
