--- a/bottom.html
+++ b/bottom.html
@@ -53,7 +53,7 @@
           <hr>
           <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
             Viewed in 800x600<br>
-            Copyright 2006 NelliTheertha.com</font></b></font></p>
+            Copyright 2024 nellitheerthatemple.in</font></b></font></p>
         </div>
       </td>
     </tr>
