--- a/index.html
+++ b/index.html
@@ -1,54 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri Kshetra Nellitheertha</title>
-    <link rel="stylesheet" href="styles.css">
+<title>Sri Kshetra Nellitheertha</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
-<body>
-    <header>
-        <div class="banner">
-            <img src="images/banner.jpg" alt="Sri Kshetra Nellitheertha">
-        </div>
-        <nav class="navbar">
-            <a href="bottom.html" class="nav-item">Home</a>
-            <a href="nelli-desc.html" class="nav-item">Description</a>
-            <a href="nelli-cave.html" class="nav-item">Cave</a>
-            <a href="nelli-hist.html" class="nav-item">History</a>
-            <a href="nelli-story.html" class="nav-item">Origin</a>
-            <a href="nelli-jaatre.html" class="nav-item">Festivals</a>
-            <a href="nelli-seva.html" class="nav-item">Seva</a>
-            <a href="http://www.nellitheertha.com/photos/main.php" class="nav-item">Gallery</a>
-            <a href="nelli-mantras.html" class="nav-item">Mantras</a>
-            <a href="http://www.nellitheertha.com/blog" class="nav-item">Blog</a>
-            <a href="nelli-route.html" class="nav-item">Get Here</a>
-        </nav>
-    </header>
-    <main>
-        <div class="content">
-            <div class="section">
-                <p><strong><span class="prayer">"Om Tat Purushaya Vidmahe,<br> Mahadevaya Dheemahi,<br> Tanno Rudra Prachodayaat"</span></strong></p>
-            </div>
-            <div class="section">
-                <img src="images/main.jpg" alt="Nellitheertha Temple" class="main-image">
-                <p><strong>The Nellitheertha Somanatheshwara Cave temple is one of the holiest temples in South Kanara. It is a truly splendid temple appealing to both the spiritually oriented and the nature lovers. Whether to pray and ask for God's blessings or just to enjoy the beauty of the cave, it's worth a visit.</strong></p>
-            </div>
-            <div class="section">
-                <p class="address"><strong>Address:<br>
-                Sri Somanatheshwara Cave Temple<br>
-                Sri Kshetra Nellitheertha<br>
-                Neerude Post, Kompadavu Village<br>
-                Mangalore Taluk, South Kanara District<br>
-                Karnataka, India – 570063<br>
-                Phone: 91-824-2299142<br>
-                Click <a href="mailto:contact@nellitheertha.com?subject=Mail%20Regarding%20Nellitheertha%20Website">here</a> to email us</strong></p>
-            </div>
-            <div class="section">
-                <hr>
-                <p class="footer">Best Viewed in 800x600<br>Copyright 2024 nellitheerthatemple.in</p>
-            </div>
-        </div>
-    </main>
-</body>
+
+<frameset rows="121,536*" frameborder="NO" border="0" framespacing="0" bordercolor="FFCF69" cols="*"> 
+  <frame name="topFrame" scrolling="NO" noresize src="top.html" >
+  <frame name="mainFrame" src="bottom.html">
+</frameset>
+<noframes>
+<body bgcolor="FFCF69">
+</body></noframes>
 </html>
