--- a/nelli-jaatre.html
+++ b/nelli-jaatre.html
@@ -52,7 +52,7 @@
           to the Lord during the procession and seeks his blessings and vows to 
           carry on the role of protecting Dharma in the region. The rituals are 
           followed by a grand lunch for one and all. The food on this day is considered 
-          as God’s prasadam and no one leaves without having some.</font></p>
+          as Godï¿½s prasadam and no one leaves without having some.</font></p>
         <p><font face="Arial, Helvetica, sans-serif" size="2">The rest of the 
           ceremonies start late in the evening and goes on till dawn next day. 
           The deity is taken on a procession and villagers offer <i>"Katte Pooje"</i> 
@@ -87,7 +87,7 @@
           </tr>
           <tr> 
             <td bgcolor="#FFCC66" width="62%"><b><font face="Arial, Helvetica, sans-serif" size="2">Chathurdashi 
-              before Hunnime in Dhanur Masa <i>(Dec—Jan)</i></font></b></td>
+              before Hunnime in Dhanur Masa <i>(Decï¿½Jan)</i></font></b></td>
             <td bgcolor="#FFCC66" width="38%"><b><font face="Arial, Helvetica, sans-serif" size="2">5 
               day annual festival</font></b></td>
           </tr>
@@ -100,12 +100,12 @@
             <td bgcolor="#FFCC66" width="62%"><b><font face="Arial, Helvetica, sans-serif" size="2">Ganesha 
               Chathurthi</font></b></td>
             <td bgcolor="#FFCC66" width="38%"><b><font face="Arial, Helvetica, sans-serif" size="2">Ganesha 
-              Utsave—Daiva Parva</font></b></td>
+              Utsaveï¿½Daiva Parva</font></b></td>
           </tr>
           <tr> 
             <td width="62%"><b><font face="Arial, Helvetica, sans-serif" size="2">Deepavali</font></b></td>
             <td width="38%"><b><font face="Arial, Helvetica, sans-serif" size="2">Daiva 
-              Parva—Ranga Pooje</font></b></td>
+              Parvaï¿½Ranga Pooje</font></b></td>
           </tr>
         </table>
         
@@ -115,11 +115,12 @@
   <tr> 
     <td height="2"> 
       <div align="center">
+        <p>&nbsp;</p>
         <hr>
-        <font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1"><br>
-        Best Viewed in 800x600<br>
-        Designed by <a href="http://www.mangaloreworld.com">MangaloreWorld.com</a><br>
-        Copyright 2006 NelliTheertha.com</font></b></font></div>
+        <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
+          Viewed in 800x600<br>
+          Copyright 2024 nellitheerthatemple.in</font></b></font></p>
+      </div>
     </td>
   </tr>
 </table>
