--- a/nelli-mantras.html
+++ b/nelli-mantras.html
@@ -21,7 +21,7 @@
       <div align="justify"> 
         <p><font size="2" face="Arial, Helvetica, sans-serif">The following are 
           some of the important mantras related to Lord Shiva. Chanting them daily, 
-          or at least on a frequent basis, is a sure way of obtaining Lord Somanatha’s 
+          or at least on a frequent basis, is a sure way of obtaining Lord Somanathaï¿½s 
           blessings.</font></p>
         <p><font size="2" face="Arial, Helvetica, sans-serif">The following documents 
           are in Kannada and have been reproduced here with the kind permission 
@@ -67,11 +67,12 @@
   <tr> 
     <td height="2"> 
       <div align="center">
+        <p>&nbsp;</p>
         <hr>
-        <font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1"><br>
-        Best Viewed in 800x600<br>
-        Designed by <a href="http://www.mangaloreworld.com">MangaloreWorld.com</a><br>
-        Copyright 2006 NelliTheertha.com</font></b></font></div>
+        <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
+          Viewed in 800x600<br>
+          Copyright 2024 nellitheerthatemple.in</font></b></font></p>
+      </div>
     </td>
   </tr>
 </table>
