--- a/nelli-route.html
+++ b/nelli-route.html
@@ -49,7 +49,7 @@
         <li> 
           <div align="justify"><font face="Arial, Helvetica, sans-serif" size="2">You 
             can also reach Nellitheertha from Bajpe via Kathelsaar. This would 
-            mean you need to take the Mangalore—Bajpe—Kathelsaar– Nellitheertha 
+            mean you need to take the Mangaloreï¿½Bajpeï¿½Kathelsaarï¿½ Nellitheertha 
             Road. This is actually the shortest route to Nellitheertha from Mangalore 
             and is about 14 kms shorter than the Moodabidri route.<br>
             <br>
@@ -59,7 +59,7 @@
           <div align="justify"><font face="Arial, Helvetica, sans-serif" size="2">Nellitheertha 
             is extremely close to Kateel which is one of the most famous temples 
             in South India. It is about 8 kms from Kateel and can be reached via 
-            Ekkaru—Neerude.</font></div>
+            Ekkaruï¿½Neerude.</font></div>
         </li>
       </ol>
     </td>
@@ -67,11 +67,12 @@
   <tr> 
     <td height="2"> 
       <div align="center">
+        <p>&nbsp;</p>
         <hr>
-        <font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1"><br>
-        Best Viewed in 800x600<br>
-        Designed by <a href="http://www.mangaloreworld.com">MangaloreWorld.com</a><br>
-        Copyright 2006 NelliTheertha.com</font></b></font></div>
+        <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
+          Viewed in 800x600<br>
+          Copyright 2024 nellitheerthatemple.in</font></b></font></p>
+      </div>
     </td>
   </tr>
 </table>
