--- a/nelli-hist.html
+++ b/nelli-hist.html
@@ -62,10 +62,12 @@
   <tr> 
     <td height="2"> 
       <div align="center">
+        <p>&nbsp;</p>
         <hr>
-        <font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1"><br>
-        Best Viewed in 800x600<br>
-        Copyright 2024 NelliTheertha.com</font></b></font></div>
+        <p><font face="Arial, Helvetica, sans-serif" size="2"><b><font size="1">Best 
+          Viewed in 800x600<br>
+          Copyright 2024 nellitheerthatemple.in</font></b></font></p>
+      </div>
     </td>
   </tr>
 </table>
